<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="9"
    tools:context=".MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/img_devfest"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_weight="2"
        android:scaleType="centerCrop"
        android:src="@drawable/devfest" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Welcome to GDG DevFest"
        android:layout_weight="1"
        android:textColor="@color/colorBlack"
        android:textSize="28sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:layout_marginEnd="10dp"
        android:padding="5dp"
        android:text="@string/devfest_meaning"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5"
        android:layout_weight="1"
        android:orientation="horizontal">


        <androidx.cardview.widget.CardView
            android:id="@+id/cdv_agenda"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/caedview_back"
                android:orientation="vertical"
                android:padding="15dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_agenda" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/agenda" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cdv_speakers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_weight="1"
            android:layout_marginTop="30dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/caedview_back"
                android:orientation="vertical"
                android:padding="15dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_speakers" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/speakers" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cdv_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_weight="1"
            android:layout_marginTop="30dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/caedview_back"
                android:orientation="vertical"
                android:padding="15dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_team" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/team" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5"
        android:layout_weight="1"
        android:orientation="horizontal">


        <androidx.cardview.widget.CardView
            android:id="@+id/cdv_sponsors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/caedview_back"
                android:orientation="vertical"
                android:padding="15dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_sponsors" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/sponsors" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cdv_FAQ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_weight="1"
            android:layout_marginTop="30dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/caedview_back"
                android:orientation="vertical"
                android:padding="15dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_faq" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/faq" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cdv_locate_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_weight="1"
            android:layout_marginTop="30dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/caedview_back"
                android:orientation="vertical"
                android:padding="15dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_locate" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/locate" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="6"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:src="@drawable/facebook"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:src="@drawable/twitter"
            android:background="@color/colorWhite"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:scaleType="fitCenter"
            android:src="@drawable/linkedin"
            android:layout_weight="1"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:src="@drawable/youtobe"
            android:layout_weight="1"/>

    </LinearLayout>


</LinearLayout>
</ScrollView>